--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@eva-design/eva": "^2.1.1",
     "@expo/vector-icons": "^12.0.0",
     "@react-native-firebase/app": "14.3.0",
     "@react-native-firebase/auth": "14.3.0",
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.1.0",
+    "@ui-kitten/components": "^5.1.1",
+    "algolia-places-react": "^1.6.1",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
     "firebase": "8.2.3",
@@ -26,6 +29,7 @@
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
+    "react-native-svg": "^12.1.1",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
