--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@ui-kitten/components": "^5.1.1",
     "algolia-places-react": "^1.6.1",
     "expo": "~42.0.1",
+    "expo-image-picker": "~10.2.2",
     "expo-status-bar": "~1.0.4",
     "firebase": "8.2.3",
     "react": "16.13.1",
